syntax="proto3";

package pkg;
option go_package = "pkg";

enum Direction {
    left = 0;
    right = 1;
    up = 2;
    down = 3;
}

message Pos {
    double x = 1;
    double y = 2;

    string level = 3;
}

message Unit {
    string id = 1;
    Pos pos = 2;
    int32 frame = 3;
    string skin = 4;
    string action = 5;
    double speed = 6;

    Direction direction = 7;
    Direction side = 8;

    CharInfo info = 9;
}

message CharInfo {
    int64 MaxHealth = 1;
    int64 CurrentHealth = 2;
}

message Event {
    enum Type {
        type_init = 0;
        type_connect = 1;
        type_exit = 2;
        type_idle = 3;
        type_move = 4;
        type_empty = 5;
        type_teleport = 6;
        type_updateinfo = 7;
    }
    Type type = 1;
    oneof data {
        EventInit init = 2;
        EventConnect connect = 3;
        EventExit exit = 4;
        EventIdle idle = 5;
        EventMove move = 6;
        EventTeleport teleport = 7;
        UpdateInfo updateInfo = 8;
    }
}

message UpdateInfo {
    string unit_id = 1;
    CharInfo info = 2;
}

message EventInit {
    string player_id = 1;
    map<string, Unit> units = 2;
}

message EventConnect {
    Unit unit = 1;
}

message EventTeleport {
    string player_id = 1;
    Pos pos = 2;
}

message EventExit {
    string player_id = 1;
}

message EventIdle {
    string player_id = 1;
}

message EventMove {
    string player_id = 1;
    Direction direction = 2;
}
